This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Memory leak in the replace() method of datetime and time objects
Type: resource usage Stage: resolved
Components: Extension Modules Versions: Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: belopolsky, serhiy.storchaka
Priority: normal Keywords:

Created on 2017-03-31 13:44 by serhiy.storchaka, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 927 merged serhiy.storchaka, 2017-03-31 13:46
PR 933 merged serhiy.storchaka, 2017-03-31 19:51
Messages (3)
msg290913 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-03-31 13:44
When pass out of bound keyword argument fold to datetime.datetime.replace() or datetime.time.replace(), ValueError is raised and just allocated object is leaked. Proposed patch fixes the leaks.
msg290936 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-03-31 19:48
New changeset 314d6fca36a4eaa0541218431d14804fadec6488 by Serhiy Storchaka in branch 'master':
bpo-29953: Fix memory leaks in the replace() method of datetime and time (#927)
https://github.com/python/cpython/commit/314d6fca36a4eaa0541218431d14804fadec6488
msg290938 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-03-31 20:23
New changeset 7d5d13d8d003ae5b62bb8c9ef1d1f310eaabc506 by Serhiy Storchaka in branch '3.6':
bpo-29953: Fix memory leaks in the replace() method of datetime and t… (#933)
https://github.com/python/cpython/commit/7d5d13d8d003ae5b62bb8c9ef1d1f310eaabc506
History
Date User Action Args
2022-04-11 14:58:44adminsetgithub: 74139
2017-03-31 20:24:49serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2017-03-31 20:23:51serhiy.storchakasetmessages: + msg290938
2017-03-31 19:51:44serhiy.storchakasetpull_requests: + pull_request1117
2017-03-31 19:48:18serhiy.storchakasetmessages: + msg290936
2017-03-31 13:46:36serhiy.storchakasetpull_requests: + pull_request824
2017-03-31 13:44:25serhiy.storchakacreate