bpo-29953: Fix memory leaks in the replace() method of datetime and t… (#933)

objects when pass out of bound fold argument.
(cherry picked from commit 314d6fca36a4eaa0541218431d14804fadec6488)